# sims_randomizer

./: Cargo.toml  README.md  config.json  config.toml
src/: data  main.rs
src/data/: game_traits.json
src/trait_randomizer/: randomize.rs
src/ui/: app_view.rs  heading.rs  list_item.rs
