[package]
name = "sims_randomizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rand = { version = "0.8.5", features = ["alloc"]}
serde = { version = "1.0", features = ["derive"] }