[package]
name = "sims_randomizer"
version = "1.0.0"
edition = "2021"
description="Randomizer tool to get traits for your sims."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = { git = "https://github.com/lapce/floem.git", rev = "341afd255f98ca431e4f615864daa4dbcc057501" }
rand = "0.8.5"
serde = {version="1", features=["derive"]}
strum = "0.25.0"
strum_macros = "0.25.3"
toml = "0.8.8"

[package.metadata.bundle]
name="Sims trait randomizer"
identifier="com.yurms.sims-randomizer"
version="1.0.0"
short_description="Randomizer tool to get traits for your sims."
icon=["./assets/icon@2x.png"]